# tspe-python

./: LICENSE.txt  README.md  pyproject.toml
reference/: 3 active electrodes.mat  5 active electrodes.mat  README.md  TSPE.m  convert_sdf_to_spiketrain.m
scripts/: benchmark_tspe.py  create_plots.py  test_tspe.py
tests/: test_filter.py  test_normalized_cross_correlation.py  test_tspe.py
tspe/: filters.py  io.py  matlab_adapter.py  metrics.py  normalized_cross_correlation.py  tspe.py  util.py
