[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tspe"
description = 'An implementation of Total Spiking Probibility Edges (TSPE) in Python'
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0"
license-files = { paths = ["LICENSE.txt"] }
keywords = []
authors = [
  { name = "Felician Richter" },
  { name = "Stephano DeBlasi" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "elephant",
  "neo"
]
dynamic = ["version"]

# [project.urls]
# Documentation = "https://github.com/unknown/tspe#readme"
# Issues = "https://github.com/unknown/tspe/issues"
# Source = "https://github.com/unknown/tspe"

[tool.hatch.version]
path = "tspe/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=tspe --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "tspe/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
